--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".activity.AddPromotionActivity" />
         <activity android:name=".activity.ViewPromotionActivity" />
         <activity android:name=".activity.EditPromotionActivity" />
+        <activity android:name=".activity.AddTourActivity" />
 
     </application>
 
