--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalProject">
         <activity
+            android:name=".ChatActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
@@ -38,7 +41,6 @@
         <activity android:name=".activity.AddTourActivity" />
         <activity android:name=".activity.TourDetailActivity" />
         <activity android:name=".activity.EditTourActivity" />
-
     </application>
 
 </manifest>
