CustomerHome, Detail, Rate and feedback, Favorite tour

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,15 @@
             android:name=".AdminActivity"
             android:exported="false" />
         <activity
+            android:name=".activity.CustomerTourDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.CustomerReviewsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.CustomerFavoriteToursActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
