--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
         <activity android:name=".activity.admin.AddTourAdminActivity" />
         <activity android:name=".activity.admin.TourDetailAdminActivity" />
         <activity android:name=".activity.admin.EditTourAdminActivity" />
-        <activity android:name=".activity.guide.TourInvitationsActivity" />
+        <activity android:name=".activity.guide.TourInvitationsGuideActivity" />
 
     </application>
 
