--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,13 +44,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.admin.AddPromotionAdminActivity" />
-        <activity android:name=".activity.admin.ViewPromotionAdminActivity" />
-        <activity android:name=".activity.admin.EditPromotionAdminActivity" />
-        <activity android:name=".activity.admin.AddTourAdminActivity" />
-        <activity android:name=".activity.admin.TourDetailAdminActivity" />
-        <activity android:name=".activity.admin.EditTourAdminActivity" />
-        <activity android:name=".activity.guide.TourInvitationsGuideActivity" />
+        <activity android:name=".activity.admin.AdminAddPromotionActivity" />
+        <activity android:name=".activity.admin.AdminPromotionDetailActivity" />
+        <activity android:name=".activity.admin.AdminEditPromotionActivity" />
+        <activity android:name=".activity.admin.AdminAddTourActivity" />
+        <activity android:name=".activity.admin.AdminTourDetailActivity" />
+        <activity android:name=".activity.admin.AdminEditTourActivity" />
+        <activity android:name=".activity.guide.GuideTourInvitationsActivity" />
 
     </application>
 
