--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity
             android:name=".GuideActivity"
             android:exported="false" />
+        <activity android:name=".activity.guide.GuidePersonalInfoActivity" />
+
         <activity
             android:name=".AdminActivity"
             android:exported="false" />
