--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
     <!-- ✅ Quyền nên đặt ở đây, bên ngoài <application> -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,9 +19,23 @@
         <activity
             android:name=".activity.customer.BookingDetailActivity"
             android:exported="false" />
+
         <activity
             android:name=".activity.customer.BookingActivity"
-            android:exported="false" />
+            android:exported="true"
+            android:label="Merchant Demo"
+            android:launchMode="singleTask">
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <data
+                    android:host="app"
+                    android:scheme="touriovn" />
+            </intent-filter>
+
+        </activity>
+
         <activity
             android:name=".activity.admin.AdminPaymentDetailActivity"
             android:exported="false" />
